infra/rabbitmq/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rabbitmq
  labels:
    pod-security.kubernetes.io/enforce: baseline
